# coffeetime

./: Cargo.toml  justfile
daemon/: Cargo.toml
daemon/src/: data_processing.rs  database.rs  main.rs
daemon/src/entities/: data.rs
shared_entities/: Cargo.toml
shared_entities/src/: entity.rs
shared_entities/src/entity/: session.rs  sleep_period.rs
src/: data_processing.rs  database.rs  draw_graph.rs  main.rs  utils.rs
systemd-services/: coffeetime-after-sleep.service  coffeetime-before-sleep.service  coffeetime-shutdown.service  coffeetime-startup.service
